--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -11,7 +11,7 @@
     border-radius: 50%;
     color: #fff;
     display: block;
-    height: 0;
+    /*height: 100%;*/
     overflow: hidden;
     padding-top: 105px;
     position: relative;
@@ -19,18 +19,70 @@
 
 }
 
-.circle-content {
-    align-items: center;
-    display: flex;
-    height: 50%;
-    hyphens: auto;
-    justify-content: center;
-    left: 50%;
-    padding: 0.75em;
+/*.circle-content {*/
+/*    align-items: center;*/
+/*    display: flex;*/
+/*    height: 50%;*/
+/*    hyphens: auto;*/
+/*    justify-content: center;*/
+/*    left: 50%;*/
+/*    padding: 0.75em;*/
+/*    position: absolute;*/
+/*    text-align: center;*/
+/*    transform: translate(-50%, -50%);*/
+/*    top: 50%;*/
+/*    width: 50%;*/
+/*    font-size: 10px;*/
+/*}*/
+/*.container {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*}*/
+
+.one-to-one {
+    width: 100%;
+    padding-top: calc(100% - 16px); /* Subtract Borders */
+    position: relative;
+    /*background: #4b5263;*/
+    border: 15px solid #f0f0f0;
+    border-radius: 50%;
+}
+
+.two-to-one {
+    width: 100%;
+    padding-top: calc(100% - 16px); /* Subtract Borders */
+    position: relative;
+    /*background: #4b5263;*/
+    border: 15px solid #f0f0f0;
+    border-radius: 50%;
+}
+
+.text {
     position: absolute;
-    text-align: center;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    width: 50%;
-    font-size: 15px;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.color-1 {
+    background-color: #e6563b;
+    color: white;
+}
+
+.color-2 {
+    background-color: #eb9d3a;
+    color: white;
+}
+
+.color-3 {
+    background-color: #7cb06c;
+    color: white;
+}
+
+.color-4 {
+    background-color: #00aba9;
+    color: white;
 }
