--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -133,8 +133,9 @@ body {
 
 .logo {
     border: none;
-    position: relative;
-    bottom: 20px;
+    /*position: absolute;*/
+    /*top: 50%;*/
+    /*padding-top: 50%;*/
 }
 .nav-link {
     color: black;
@@ -147,6 +148,8 @@ body {
     padding: 0;
     width: 100%;
     height: 65px;
+    position: relative;
+    justify-content: space-evenly;
 }
 
 .topBrand {
@@ -157,3 +160,16 @@ body {
     font-family: 'Abel', sans-serif;
 }
 
+.imagePreview {
+    height: 50px;
+    width: 50px;
+    border: 3px solid #f0f0f0;
+    border-radius: 5px;
+    background-position: center;
+    background-size: 65px;
+}
+
+#google {
+    background-image: url("../img/google-search.jpg");
+
+}
